->preaparations for a person-autocomplete capable index